--- a/docs/9_16.md
+++ b/docs/9_16.md
@@ -2,6 +2,6 @@
 # 9.16
 
 1.测试seatunnel是否同步成功
->![img_9_16_1.png](img.png)
-> ![img_9_16_2.png](img_1.png)
-> ![img_9_16_3.png](img_2.png)
+>![img_9_16_1.png](img/img_9_16_1.png)
+> ![img_9_16_2.png](img/img_9_16_2.png)
+> ![img_9_16_3.png](img/img_9_16_3.png)
