--- a/docs/9_28.md
+++ b/docs/9_28.md
@@ -3,10 +3,10 @@
 
 1.新增指标
 高价值用户识别指标表等
->![img.png](img_9_28_1.png)
+>![img.png](img/img_9_28_1.png)
 
 2.爬虫编写
->![img_1.png](img_9_28_2.png)
+>![img_1.png](img/img_9_28_2.png)
 
 
 遇到的问题:
