--- a/docs/10_16.md
+++ b/docs/10_16.md
@@ -3,7 +3,7 @@
 
 1.全库离线全量同步(已完成)
 >![img.png](img/10_16_1.png)
-
+>![img.png](img/img_10_16_3.png)
 
 2.orcl10数据库部署完成
 ![img_1.png](img/10_16_2.png)
